# medhelper

./: Last Try.ipynb
back/back/: settings.py
back/login/: email_utils.py  tasks.py  views.py
back/login/migrations/: 0001_initial.py  0002_alter_customuser_is_active.py
backend/: pyproject.toml
backend/back/assistant/: admin.py  models.py  views.py
backend/back/assistant/migrations/: 0001_initial.py
backend/back/back/: celery.py  settings.py  urls.py
backend/back/chat/: serializers.py  views.py
backend/back/login/: email_utils.py  models.py  serializers.py  tasks.py  views.py
backend/back/login/migrations/: 0001_initial.py  0002_customuser_date_joined.py
backend/back/modelPredictor/: apps.py  models.py  views.py
frontend/cancer-detection-app/: angular.json  package-lock.json  package.json
frontend/cancer-detection-app/.angular/cache/18.2.9/cancer-detection-app/: .tsbuildinfo
frontend/cancer-detection-app/src/: index.html  styles.css
frontend/cancer-detection-app/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  auth-state.service.ts  auth.service.ts  chat.service.ts
frontend/cancer-detection-app/src/app/pages/chat/: chat.component.css  chat.component.html  chat.component.ts
frontend/cancer-detection-app/src/app/pages/confirmation/: confirmation.component.css  confirmation.component.html
frontend/cancer-detection-app/src/app/pages/login/: login.component.css  login.component.html  login.component.ts
(+10 files in other folders)
